--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>LocalWeather</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <% flash.each do |type, message| %>
+      <div class="<%= "flash #{type}" %>"><%= message %></div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
+
